# ucsschool-kelvin-rest-api

./: .bandit  .black  .dockerignore  .env.alembic  .env.local-tests  .flake8  .gitattributes  .gitignore  .gitignore.example  .gitlab-ci.yml  .gitmodules  .isort.cfg  .justfile  .pre-commit-config.yaml  .python-version  AGENTS.md  CLAUDE.md  Dockerfile.pre-commit  LICENSE  Makefile  README.md  REUSE.toml  TODO.md  autoupdate-kelvin-container  build_appcenter_changelog.py  devbox.json  fix_nt_acl_on_shares  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  renovate.json  sonar-project.properties  start.sh  starter.py  user_pre_mod_validation_hook.py
kelvin-api/: .gitignore  LICENSE  Makefile  VERSION.txt  changelog.rst  pyproject.toml  readme.rst  requirements.txt  requirements_all.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  socket_server.py  update_openapi_client
kelvin-api/etc/rsyslog.d/: univention_kelvin.conf
kelvin-api/opa_policies/: policies.rego
kelvin-api/static/: redoc.standalone-2.0.0-rc.75.js  swagger-ui-5.17.14.css  swagger-ui-bundle-5.17.14.js  swagger-ui-standalone-preset.js
kelvin-api/tests/: conftest.py  constants.py  test_base.py  test_caching.py  test_config.py  test_constants.py  test_custom_hooks_add_school_admins_to_admin_group.py  test_db_compatibility.py  test_import_framework_config.py  test_import_user.py  test_ldap.py  test_login.py  test_opa_integration.py  test_pyhook.py  test_reader_auth.py  test_route_base.py  test_route_role.py  test_route_school.py  test_route_school_class.py  test_route_status.py  test_route_user.py  test_route_user_schemetest.py  test_route_v1_v2_parity.py  test_route_workgroup.py  test_school_class_name_syntax.py  test_token_auth.py  test_urls.py  test_user_to_model.py
kelvin-api/tests/corelib/: conftest.py
kelvin-api/ucsschool/kelvin/: __init__.py  cli.py  config.py  constants.py  database.py  exceptions.py  import_config.py  ldap.py  ldap_access.py  main.py  opa.py  token_auth.py  urls.py  wait_for_db_full.py
kelvin-connector/: README.md  pyproject.toml
kelvin-connector/src/kelvin_connector/: __init__.py  connector.py  consumer.py  consumer_lib.py  containers.py  database_models.py  event_handler.py  models.py  nubus_compat.py  ports.py  property_mapper.py  sync.py
kelvin-connector/tests/: conftest.py  test_connector.py  test_consumer.py  test_container_wiring.py  test_dummy.py  test_mapper.py  test_nubus_compat.py  test_sync.py  test_udm_validation.py
ucs-school-import/: .gitignore  35ucs-school-import.inst  40ucs-school-import-http-api.inst  60ucs-school-import-http-api.uinst  82univention-ucs-school-import-custom-attributes.inst  README.md  pyproject.toml  settings.py
ucs-school-import/debian/: changelog  compat  control  copyright  rules  ucs-school-import-http-api-client.install  ucs-school-import-http-api-common.dirs  ucs-school-import-http-api-common.install  ucs-school-import-http-api-doc.install  ucs-school-import-http-api.dirs  ucs-school-import-http-api.install  ucs-school-import-http-api.postinst  ucs-school-import-http-api.postrm  ucs-school-import-http-api.prerm  ucs-school-import-http-api.service  ucs-school-import-http-api.univention-config-registry  ucs-school-import-http-api.univention-config-registry-variables  ucs-school-import-schema.dirs  ucs-school-import-schema.install  ucs-school-import-schema.postinst  ucs-school-import-schema.postrm  ucs-school-import.dirs  ucs-school-import.install  ucs-school-import.links  ucs-school-import.postinst  ucs-school-import.preinst  ucs-school-import.univention-config-registry  ucs-school-import.univention-config-registry-categories  ucs-school-import.univention-config-registry-variables  ucslint.overrides
ucs-school-import/examples/: import-networks-example.csv.license
ucs-school-import/modules/: pyproject.toml  setup.py
ucs-school-import/schema/: ucs-school-import.schema
ucs-school-import/syntax/: syntax.ucs-school-import.py
ucs-school-import/syntax/de/: univention-admin-syntax-ucsschool_import.po
ucs-school-import/tests/: test_move_domaincontroller_to_ou
ucs-school-import/udm_hook/: de.po  ucsschool_legal_guardian.py  ucsschool_legal_ward.py  ucsschool_purge_timestamp.py  ucsschool_role_computers.py  ucsschool_user_options.py
ucs-school-lib/: Makefile  lessons.ini  modify_ucr_list  pyproject.toml  smbstatus_testdata.txt
ucs-school-lib/debian/: changelog  control  copyright  python-ucs-school.dirs  python-ucs-school.install  python-ucs-school.postinst  python-ucs-school.univention-config-registry-variables  python-ucs-school.univention-l10n  rules  shell-ucs-school.install
ucs-school-lib/modules/: pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
ucs-school-lib/shell/: base.sh  umc.sh
ucs-test-ucsschool-kelvin/94_ucsschool-kelvin-performance/: 001_get_all_schools.py  001_school_cache_warmup.py  002_get_school.py  003_head_school.py  010_get_all_users.py  011_get_user.py  011_users_head_stable.py  011_users_post_stable.py  012_users_post_max.py  013_create_user.py  01_users_post.py  020_get_all_classes.py  021_get_class.py  021_users_get_obj_stable.py  021_users_get_stable.py  022_users_get_max.py  022_users_get_obj_max.py  030_get_all_workgroups.py  031_get_workgroup.py  031_users_get_list_stable.py  040_get_all_roles.py  041_get_role.py  041_users_post_stable.py  042_users_post_max.py  051_users_patch_stable.py  061_users_put_stable.py  071_users_delete_stable.py  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt  wait_for_db_full.py
ucs-test-ucsschool-kelvin/94_ucsschool-kelvin-performance/locust_files/: 00_schools_get_all.py  01_users_post.py  02_users_get_obj.py  04_users_post.py  auth.py  base.py  classes.py  roles.py  schools.py  settings_kelvin.py  (+5 more)
ucsschool-objects/: AGENTS.md  README.md  pyproject.toml
ucsschool-objects/tests/: conformance.py  conftest.py  test_architecture.py  test_core_readers.py  test_nubus_compat.py  test_types.py
univention-directory-manager-modules-slim/: pyproject.toml
univention-lib-slim/: pyproject.toml
(+622 files in other folders)
