[project]
dynamic = ["version"]
name = "ucsschool-kelvin-rest-api"
license = "AGPL-3.0-only"
description = "UCS@school Kelvin REST API"
authors = [
    { name = "Univention GmbH", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=24.1.0",
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "async-property>=0.2.2",
    "cachetools>=6.1.0",
    "diskcache>=5.6.3",
    "fastapi>=0.95.2,<0.98.0",
    "gunicorn>=23.0.0",
    "httpx<0.28.0",
    "lazy-object-proxy>=1.11.0",
    "openapi-client-udm",
    "orjson>=3.11.0",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic[dotenv,email]<2",
    "pyjwt<2.10",
    "python-multipart>=0.0.20",
    "setuptools<81",
    "timing-asgi>=0.3.1",
    "ucs-school-import",
    "ucs-school-lib",
    "ucsschool-objects",
    "uldap3",
    "univention-configuration-registry",
    "univention-debhelper",
    "univention-directory-manager-modules",
    "uvicorn>=0.35.0",
]

[project.scripts]
ucr = "ucsschool.kelvin.cli:run_ucr"
univention-config-registry = "ucsschool.kelvin.cli:run_ucr"

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kelvin-api/ucsschool"]

[tool.hatch.version]
source = "code"
path = "kelvin-api/ucsschool/kelvin/__init__.py"
expression = "get_version()"

[tool.uv.workspace]
members = [
    "univention-lib-slim",
    "univention-directory-manager-modules-slim",
    "ucs-school-lib",
    "ucs-school-import",
    "ucsschool-objects",
]

[tool.uv.sources]
uldap3 = { git = "https://git.knut.univention.de/univention/dev/libraries/uldap3.git" }
univention-directory-manager-modules = { workspace = true }
ucs-school-lib = { workspace = true }
ucs-school-import = { workspace = true }
ucsschool-objects = { workspace = true }
openapi-client-udm = { path = "openapi-client-udm-1.0.2.tar.gz" }
# Don't use git for the ucs repo, a checkout takes around 3 min
# https://github.com/astral-sh/uv/issues/1737
# Also don't use a branch, because the checksum of the download changes on new commits
univention-debhelper = { url = "https://git.knut.univention.de/univention/dev/ucs/-/archive/release-5.2-5/ucs-release-5.2-5.tar.gz?path=packaging/univention-debhelper", subdirectory = "packaging/univention-debhelper" }
univention-configuration-registry = { url = "https://git.knut.univention.de/univention/dev/ucs/-/archive/release-5.2-5/ucs-release-5.2-5.tar.gz?path=base/univention-config-registry", subdirectory = "base/univention-config-registry" }

[dependency-groups]
dev = [
    "coverage>=5.3",
    "coverage~=6.5.0",
    "factory_boy>=3.1.0",
    "Faker~=15.0.0",
    "pytest~=9.0.2",
    "pytest-cov~=4.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock",
    "pyfakefs~=4.7.0",
    "tenacity>=9.1.2",
]

[tool.pytest.ini_options]
addopts = "--verbose --showlocals -p no:warnings --asyncio-mode=auto"


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

