[project]
dynamic = ["version"]
name = "ucsschool-kelvin-rest-api"
license = "AGPL-3.0-only"
description = "UCS@school Kelvin REST API"
authors = [
    { name = "Univention GmbH", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=24.1.0",
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "async-property>=0.2.2",
    "cachetools>=6.1.0",
    "diskcache>=5.6.3",
    "fastapi>=0.95.2,<0.98.0",
    "gunicorn>=23.0.0",
    "httpx<0.28.0",
    "kelvin-connector",
    "lazy-object-proxy>=1.11.0",
    "openapi-client-udm",
    "orjson>=3.11.0",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "psycopg[binary]>=3.3.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic[dotenv,email]<2",
    "pyjwt<2.10",
    "python-multipart>=0.0.20",
    "setuptools<81",
    "timing-asgi>=0.3.1",
    "ucs-school-import",
    "ucs-school-lib",
    "ucsschool-objects",
    "uldap3",
    "univention-configuration-registry",
    "univention-debhelper",
    "univention-directory-manager-modules",
    "uvicorn>=0.35.0",
]

[project.scripts]
ucr = "ucsschool.kelvin.cli:run_ucr"
univention-config-registry = "ucsschool.kelvin.cli:run_ucr"

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kelvin-api/ucsschool"]

[tool.hatch.version]
source = "code"
path = "kelvin-api/ucsschool/kelvin/__init__.py"
expression = "get_version()"

[tool.uv.workspace]
members = [
    "univention-lib-slim",
    "univention-directory-manager-modules-slim",
    "ucs-school-lib",
    "ucs-school-import",
    "ucsschool-objects",
    "kelvin-connector"
]

[tool.uv.sources]
uldap3 = { git = "https://git.knut.univention.de/univention/dev/libraries/uldap3.git" }
univention-directory-manager-modules = { workspace = true }
ucs-school-lib = { workspace = true }
ucs-school-import = { workspace = true }
ucsschool-objects = { workspace = true }
openapi-client-udm = { path = "openapi-client-udm-1.0.2.tar.gz" }
# Don't use git for the ucs repo, a checkout takes around 3 min
# https://github.com/astral-sh/uv/issues/1737
# Also don't use a branch, because the checksum of the download changes on new commits
univention-debhelper = { url = "https://git.knut.univention.de/univention/dev/ucs/-/archive/release-5.2-5/ucs-release-5.2-5.tar.gz?path=packaging/univention-debhelper", subdirectory = "packaging/univention-debhelper" }
univention-configuration-registry = { url = "https://git.knut.univention.de/univention/dev/ucs/-/archive/release-5.2-5/ucs-release-5.2-5.tar.gz?path=base/univention-config-registry", subdirectory = "base/univention-config-registry" }
kelvin-connector = { workspace = true }
provisioning-consumer = { git = "https://git.knut.univention.de/univention/dev/libraries/provisioning-consumer-template", branch = "pypi" }

[dependency-groups]
dev = [
    "coverage>=5.3",
    "coverage~=6.5.0",
    "factory_boy>=3.1.0",
    "Faker~=15.0.0",
    "pytest~=9.0.2",
    "pytest-cov~=4.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock",
    "pyfakefs~=4.7.0",
    "tenacity>=9.1.2",
    "eralchemy[graphviz]>=1.6.0",
    "mypy>=1.20.1",
]

[tool.pytest.ini_options]
addopts = "--verbose --showlocals -p no:warnings --asyncio-mode=auto"

[tool.mypy]
mypy_path = ["ucsschool-objects/src"]

[[tool.mypy.overrides]]
module = ["pytest_asyncio"]
ignore_missing_imports = true

[tool.alembic]
script_location = "%(here)s/alembic"
