[project]
name = "kelvin-connector"
version = "0.1.0"
description = "Connector from Nubus to Kelvin"
readme = "README.md"
authors = [
    { name = "Univention GmbH", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "provisioning-consumer",
    "python-ldap>=3.4.4",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.48",
    "ucsschool-objects",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
connector = "kelvin_connector.consumer:main"

[tool.pytest.ini_options]
addopts = "--verbose --showlocals -p no:warnings  --cov=kelvin_connector --cov-report=term-missing"
testpaths = ["tests"]



[tool.coverage.run]
source = ["src/kelvin_connector"]
branch = true
omit = ["*/src/kelvin_connector/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
provisioning-consumer = { git = "https://git.knut.univention.de/univention/dev/libraries/provisioning-consumer-template", branch = "pypi" }
ucsschool-objects = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]
