[project]
name = "ucs-school-import"
version = "17.0.52"
description = ""
authors = [
    { name = "Univention", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "python-magic>=0.4.27",
    "ucs-school-lib",
]

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["modules/"]
packages = ["modules/"]

[tool.uv.sources]
ucs-school-lib = { workspace = true }
