[project]
name = "ucs-school-lib"
version = "12.2.11"
description = ""
authors = [
    { name = "Univention", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "lazy-object-proxy>=1.11.0",
    "python-ldap>=3.4.4",
    "ruamel-yaml<0.18.0",
    "setuptools<81",
    "six>=1.17.0",
    "udm-rest-client>=1.3.1",
    "uldap3",
    "univention-directory-manager-modules",
    "univention-lib",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "modules"
module-name = ["ucsschool.lib"]

[tool.uv.sources]
univention-directory-manager-modules = { workspace = true }
univention-lib = { workspace = true }
uldap3 = { git = "https://git.knut.univention.de/univention/dev/libraries/uldap3.git" }
