[project]
name = "ucs-school-lib"
version = "12.2.11"
description = ""
authors = [
    { name = "Univention", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "lazy-object-proxy>=1.11.0",
    "python-ldap>=3.4.4",
    "ruamel-yaml<0.18.0",
    "setuptools<81",
    "six>=1.17.0",
    "udm-rest-api-client[async,sync]>=0.1.2",
    "uldap3",
    "univention-directory-manager-modules",
    "univention-lib",
]

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules/ucsschool"]

[tool.uv.sources]
univention-directory-manager-modules = { workspace = true }
univention-lib = { workspace = true }
uldap3 = { git = "https://git.knut.univention.de/univention/dev/libraries/uldap3.git" }
udm-rest-api-client = { git = "https://git.knut.univention.de/univention/dev/libraries/udm-rest-api-client.git", branch = "juern/for_kelvin" }
