[project]
name = "ucsschool-objects"
version = "0.1.0"
description = "Library for manipulating ucsschool objects."
readme = "README.md"
authors = [
    { name = "Univention GmbH", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2,<=3",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
