[project]
name = "ucsschool-objects"
version = "0.1.0"
description = "Library for manipulating ucsschool objects."
readme = "README.md"
authors = [
    { name = "Univention GmbH", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2,<=3",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "faker>=15.0.0",
    "mypy>=1.20.0",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "--verbose --showlocals -p no:warnings  --cov=ucsschool_objects --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ucsschool_objects"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/ucsschool_objects", "tests"]
explicit_package_bases = true
mypy_path = ["src"]
