[tool.poetry]
name = "univention-directory-manager-modules"
version = "14.0.13"
description = ""
authors = ["Jürn Brodersen <brodersen@univention.de>"]
packages = [
    { include = "univention" },
]

[tool.poetry.dependencies]
python = "^3.11"
ipaddr = "^2.2.0"
python-ldap = "^3.4.4"
requests = "^2.32.4"
univention-lib = {path = "../univention-lib-slim"}
unidecode = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
