[project]
name = "univention-directory-manager-modules"
version = "14.0.13"
description = ""
authors = [
    { name = "Univention", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "ipaddr>=2.2.0",
    "python-ldap>=3.4.4",
    "requests>=2.32.4",
    "unidecode>=1.4.0",
    "univention-lib",
]

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["univention/"]

[tool.uv.sources]
univention-lib = { workspace = true }
