[project]
name = "univention-lib"
version = "1.0.0"
description = ""
authors = [
    { name = "Univention", email = "ucsschool-maintainers@univention.de" }
]
requires-python = ">=3.11"
dependencies = [
    "six>=1.17.0",
]

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["univention/"]
