# SPDX-FileCopyrightText: 2026 Univention GmbH
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "ucs-test-ucsschool-kelvin-performance"
version = "0.1.0"
description = "Performance Tests for the Kelvin REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.3",
    "faker>=37.11.0",
    "locust>=2.42.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling<2"]
build-backend = "hatchling.build"
